--- a/index.html
+++ b/index.html
@@ -1337,20 +1337,17 @@
             box-shadow: none;
         }
 
-        .citation-quick-hints {
-            margin-top: 2px;
-            font-size: 10px;
-            color: #5a6f8c;
+        .citation-quick-label {
             display: flex;
-            flex-wrap: wrap;
+            align-items: center;
             gap: 6px;
         }
 
-        .citation-quick-hints span {
-            background: rgba(59, 130, 246, 0.1);
-            color: #2360c7;
-            padding: 2px 6px;
-            border-radius: 4px;
+        .citation-quick-info {
+            font-size: 12px;
+            color: #2563eb;
+            cursor: help;
+            user-select: none;
         }
 
         /* Enhanced Citation Modal Styling */
@@ -1825,22 +1822,21 @@
                             </div>
                         </div>
                         <!-- Quick capture -->
-                        <div id="citation-quick-capture-wrapper" class="citation-quick-capture">
-                            <label for="citation-quick-capture">
+                        <div id="citation-quick-capture-wrapper" class="citation-quick-capture" title="Paste a URL, DOI, tweet, or markdown link. Press Enter or click Add to capture. Drag text snippets here; DOI lookups run automatically.">
+                            <label for="citation-quick-capture" class="citation-quick-label">
                                 ⚡ Quick Capture
                                 <span style="font-weight: 400; font-size: 11px; color: #5a6f8c;">
                                     Paste a URL, DOI, tweet, or markdown link
                                 </span>
+                                <span class="citation-quick-info" title="Press Enter or click Add to capture. Drag text snippets here. Supports automatic DOI lookup.">ⓘ</span>
                             </label>
-                            <textarea id="citation-quick-capture" placeholder="Example: https://twitter.com/... or 10.1145/12345.67890 or [Great Thread](https://example.com)"></textarea>
+                            <textarea
+                                id="citation-quick-capture"
+                                placeholder="Example: https://twitter.com/... or 10.1145/12345.67890 or [Great Thread](https://example.com)"
+                                title="Paste a URL, DOI, tweet, or markdown link. Press Enter or click Add to capture. Drag text snippets here; DOI lookups run automatically."></textarea>
                             <div class="citation-quick-controls">
                                 <button id="citation-quick-capture-btn" class="citation-quick-button" title="Create citation from the pasted reference">Add Citation</button>
                                 <div id="citation-quick-status" class="citation-quick-status"></div>
-                            </div>
-                            <div class="citation-quick-hints">
-                                <span>Press Enter or click Add to capture</span>
-                                <span>Drop text snippets here</span>
-                                <span>Supports DOI auto-lookup</span>
                             </div>
                         </div>
                         <!-- Collection Switcher (below buttons) -->
