Adds multi-folder workspace support to file tree
Enables users to add and remove multiple folders as workspace roots, updating the file tree to display all roots with context menu controls. Enhances search, file queries, and markdown indexing to span all workspace folders. Improves UI with new buttons and icons for managing workspace folders and updates settings structure for multi-root awareness.

Facilitates organizing and searching content across several folders, making project management more flexible.

--- a/index.html
+++ b/index.html
@@ -1991,8 +1991,9 @@
                 <div style="display: flex; align-items: center; justify-content: space-between; margin-top: 4px;">
                     <h2 id="structure-pane-title">Structure</h2>
                     <div style="display: flex; gap: 4px;">
-                        <button id="change-directory-btn" class="btn" title="Change Working Directory" style="display: none; padding: 4px 8px; font-size: 11px;">📁 Directory</button>
-                        <button id="new-folder-btn" class="btn" title="Create New Folder" style="padding: 4px 8px; font-size: 11px;">+ Folder</button>
+                        <button id="add-workspace-folder-btn" class="btn" title="Add existing folder to workspace (shows as separate root)" style="display: none; padding: 4px 8px; font-size: 11px;">📂 Add Root</button>
+                        <button id="change-directory-btn" class="btn" title="Change the primary working directory" style="display: none; padding: 4px 8px; font-size: 11px;">🏠 Primary</button>
+                        <button id="new-folder-btn" class="btn" title="Create a new subfolder inside selected folder" style="padding: 4px 8px; font-size: 11px;">📁 New Folder</button>
                     </div>
                 </div>
             </div>
