Copy/paste feature

--- a/index.html
+++ b/index.html
@@ -2973,6 +2973,7 @@
                                 <span id="line-count">Lines: 1</span>
                             </div>
                             <div id="status-right" style="display: flex; align-items: center; gap: 12px;">
+                                <span id="git-status-indicator" style="display: none; cursor: pointer;" title="Click for Git options"></span>
                                 <span id="cursor-position">Ln 1, Col 1</span>
                                 <span id="file-status">Markdown (.md)</span>
                                 <span id="progress-status">Next shard: 30 words</span>
